# phantom-cplayer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.c
.github/: FUNDING.yml
src/: main.c  utils.c  utils.h
src/view/: GtkPlayer.c  GtkPlayer.h  GtkVlc.c  GtkVlc.h  MediaPlayerWidget.c  MediaPlayerWidget.h  VlcWidget.c  VlcWidget.h
